KOGITO-6856 Replaced List#of with Collections#singletonList and improved test implementation in CloudEventHttpOutgoingDecoratorTest
Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>